# reddit_api_impl

./: .gitignore  Cargo.toml
migrations/2020-04-28-173131_create_users/: up.sql
migrations/2020-04-28-184604_create_posts/: up.sql
migrations/2020-04-28-191416_create_comments/: up.sql
migrations/2020-04-28-193055_create_communities/: down.sql  up.sql
migrations/2020-04-28-193410_alter_posts/: down.sql  up.sql
migrations/2020-05-02-232606_alter_users/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/data/: bindings.rs  mod.rs  models.rs
src/data/models/: mod.rs
src/data/repositories/: mod.rs  user.rs
src/models/: mod.rs
src/routes/: user.rs
src/service/: user.rs
