[package]
name = "reddit_api_impl"
version = "0.1.0"
authors = ["Mayowa Aj <sagaraaj69@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.4"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
rocket_codegen = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]